@@ -1,3 +1,9 @@
+2023-11-18T08:07:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6912759937 # 4189
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-18
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2894 / 0 2895 / +0 +1
+
 2023-11-18T04:07:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6911710448 # 4188
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-18
